[Add] [Update] material calendar 구현을 위한 EventDecorator class 추가, CalendarFragment 수정을 통해 달력의 지정한 날짜에 원하는 색의 점을 찍을 수 있도록 함. 어떠한 날짜를 클릭하면 toast 메시지를 띄우드록 함.

--- a/MediaFIT-master/Exercise_Helper/app/src/main/res/layout/fragment_calendar.xml
+++ b/MediaFIT-master/Exercise_Helper/app/src/main/res/layout/fragment_calendar.xml
@@ -6,12 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <CalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="wrap_content"
+    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+        android:id="@+id/calendar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:mcv_selectionColor="#FFBED4"
+        app:mcv_showOtherDates="defaults" />
 </androidx.constraintlayout.widget.ConstraintLayout>
