--- a/MediaFIT-master/Exercise_Helper/app/src/main/res/layout/fragment_ranking.xml
+++ b/MediaFIT-master/Exercise_Helper/app/src/main/res/layout/fragment_ranking.xml
@@ -14,6 +14,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/myRank"
             android:layout_marginLeft="20dp"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
@@ -35,19 +36,20 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <TextView
+                android:layout_marginTop="10dp"
                 android:layout_gravity="center"
-                android:textSize="50sp"
+                android:textSize="20sp"
                 android:id="@+id/mynickname"
                 android:text="@string/nodata"
                 android:layout_width="match_parent"
-                android:layout_height="75dp"/>
+                android:layout_height="50dp"/>
             <TextView
-
-                android:textSize="50sp"
+                android:layout_marginTop="10dp"
+                android:textSize="20sp"
                 android:text="@string/noscore"
                 android:id="@+id/myscore"
                 android:layout_width="match_parent"
-                android:layout_height="75dp"/>
+                android:layout_height="50dp"/>
         </LinearLayout>
 
     </LinearLayout>
