[Update] Routine fragment Button 크기 자동 조절 되도록 업데이트 및 기타 색 변수명 수정

--- a/MediaFIT-master/Exercise_Helper/app/src/main/res/layout/fragment_exercise.xml
+++ b/MediaFIT-master/Exercise_Helper/app/src/main/res/layout/fragment_exercise.xml
@@ -12,7 +12,7 @@
         android:layout_height="52dp"
         android:background="@drawable/weekday_inactive"
         android:gravity="center"
-        android:shadowColor="@color/gery_inactive"
+        android:shadowColor="@color/grey_inactive"
         android:shadowDx="8"
         android:shadowDy="8"
         android:shadowRadius="4"
