--- a/MediaFIT-master/Exercise_Helper/app/src/main/res/layout/fragment_home.xml
+++ b/MediaFIT-master/Exercise_Helper/app/src/main/res/layout/fragment_home.xml
@@ -26,7 +26,7 @@
             tools:ignore="MissingConstraints">
         <TextView
             style="@android:style/Widget.Button"
-            android:shadowColor="@color/gery_inactive"
+            android:shadowColor="@color/grey_inactive"
             android:shadowDx="8"
             android:shadowDy="8"
             android:shadowRadius="4"
