--- a/MediaFIT-master/Exercise_Helper/app/src/main/res/layout/fragment_routine_list.xml
+++ b/MediaFIT-master/Exercise_Helper/app/src/main/res/layout/fragment_routine_list.xml
@@ -16,7 +16,7 @@
         tools:ignore="MissingConstraints">
         <TextView
             style="@android:style/Widget.Button"
-            android:shadowColor="@color/gery_inactive"
+            android:shadowColor="@color/grey_inactive"
             android:shadowDx="8"
             android:shadowDy="8"
             android:shadowRadius="4"
@@ -35,7 +35,7 @@
 
 
     <include
-        layout="@layout/weekday_button" />
+        layout="@layout/routine_button"/>
 
     <include
         layout="@layout/fragment_routine_content" />
