--- a/MediaFIT-master/Exercise_Helper/app/src/main/res/values/colors.xml
+++ b/MediaFIT-master/Exercise_Helper/app/src/main/res/values/colors.xml
@@ -20,7 +20,7 @@
     <color name="blue_grey_inactive">#90a4ae</color>
     <color name="yellow_inactive">#fff176</color>
     <color name="orange_inactive">#ffb74d</color>
-    <color name="gery_inactive">#e0e0e0</color>
+    <color name="grey_inactive">#e0e0e0</color>
 
     <color name="default_inactive">#78909c</color>
 
