--- a/MediaFIT-master/Exercise_Helper/app/src/main/res/layout/routine_create_dialog_f.xml
+++ b/MediaFIT-master/Exercise_Helper/app/src/main/res/layout/routine_create_dialog_f.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="10dp"
     android:background="@drawable/weekday_inactive"
-    tools:context=".DB.CreateRoutine.RoutineCreateDialogF">
+    tools:context=".fragment.RoutineCreateDialogF">
 
 
 
